--- a/style.css
+++ b/style.css
@@ -254,9 +254,9 @@
     z-index: 10;
 }
 
-.ak-badge-hot { background: #d0021b; }
+.ak-badge-hot { background: #e47911; }
 .ak-badge-sale { background: #e47911; }
-.ak-badge-new { background: #008a00; }
+.ak-badge-new { background: #e47911; }
 
 .ak-store-unique-item-name {
     font-size: 18px;
@@ -501,6 +501,7 @@
             display: inline-block;
             margin-top: 30px;
         }
+
 
 
 
