--- a/style.css
+++ b/style.css
@@ -314,6 +314,8 @@
             font-size: 30px;
             font-weight: bold;
             cursor: pointer;
+                position: absolute;
+                right: 0;
         }
 
         /* Mobile Adjustments */
@@ -501,6 +503,7 @@
             display: inline-block;
             margin-top: 30px;
         }
+
 
 
 
