--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
         body {
             background-color: #e3e6e6;
+                overflow-x: hidden;
         }
 
         a {
@@ -554,6 +555,7 @@
             display: inline-block;
             margin-top: 30px;
         }
+
 
 
 
