--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@
             height: 40px;
             position: relative;
             z-index: 100; /* Dropdown ko upar dikhane ke liye */
+                justify-content: center;
         }
 
         /* Dropdown Container */
@@ -559,6 +560,7 @@
             display: inline-block;
             margin-top: 30px;
         }
+
 
 
 
