--- a/style.css
+++ b/style.css
@@ -562,6 +562,14 @@
             margin-top: 30px;
         }
 
+/*  Graphics Blog */
+#blogak03 h3 {
+    color: #ff6600;
+}
+.akblog04 p {
+    font-size: 16px;
+}
+
 
 
 
